parser.output
Grammar

    0 $accept: Programa $end

    1 Programa: DeclaracionGlobal SetupDef FuncionDef

    2 DeclaracionGlobal: ε
    3                  | DeclaracionGlobal Declaracion PUNTOYCOMA_TOKEN
    4                  | DeclaracionGlobal Expresion PUNTOYCOMA_TOKEN

    5 SetupDef: VOID_TOKEN SETUP_TOKEN PAREN_IZQ_TOKEN PAREN_DER_TOKEN Bloque

    6 Bloque: INICIO_TOKEN ListaInstrucciones FIN_TOKEN

    7 ListaInstrucciones: ε
    8                   | ListaInstrucciones Instruccion

    9 Instruccion: Declaracion PUNTOYCOMA_TOKEN
   10            | Expresion PUNTOYCOMA_TOKEN
   11            | If
   12            | For
   13            | While
   14            | DoWhile
   15            | Bloque

   16 Declaracion: Tipo ListaDeclaradores

   17 ListaDeclaradores: Declarador
   18                  | ListaDeclaradores COMA_TOKEN Declarador

   19 Declarador: ID_TOKEN DeclaracionInit

   20 DeclaracionInit: ASIGN_TOKEN Expresion
   21                | ε

   22 If: IF_TOKEN PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN Bloque IfPrima

   23 IfPrima: ELSE_TOKEN Bloque
   24        | ε

   25 For: FOR_TOKEN PAREN_IZQ_TOKEN ForInit PUNTOYCOMA_TOKEN ExpresionLogicaFor PUNTOYCOMA_TOKEN ForStep PAREN_DER_TOKEN Bloque

   26 ForInit: Declaracion
   27        | Expresion
   28        | ε

   29 ExpresionLogicaFor: Expresion
   30                   | ε

   31 ForStep: Expresion
   32        | ε

   33 DoWhile: DO_TOKEN INICIO_TOKEN Bloque FIN_TOKEN WHILE_TOKEN PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN PUNTOYCOMA_TOKEN

   34 While: WHILE_TOKEN PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN Bloque

   35 FuncionDef: TipoRetorno ID_TOKEN PAREN_IZQ_TOKEN ListaParametros PAREN_DER_TOKEN Bloque

   36 ListaParametros: ε
   37                | ListaParametrosCont

   38 ListaParametrosCont: Parametro
   39                    | ListaParametrosCont COMA_TOKEN Parametro

   40 Parametro: Tipo ID_TOKEN

   41 TipoRetorno: VOID_TOKEN
   42            | Tipo

   43 Tipo: TIPO_TOKEN_INT
   44     | TIPO_TOKEN_BOOLEAN
   45     | TIPO_TOKEN_FLOAT
   46     | TIPO_TOKEN_CHAR
   47     | TIPO_TOKEN_STRING

   48 ListaArgumentos: ε
   49                | ListaArgumentosCont

   50 ListaArgumentosCont: Expresion
   51                    | ListaArgumentosCont COMA_TOKEN Expresion

   52 Expresion: ExpLogicaOr ASIGN_TOKEN Expresion
   53          | ExpLogicaOr

   54 ExpLogicaOr: ExpLogicaOr OR_TOKEN ExpLogicaAnd
   55            | ExpLogicaAnd

   56 ExpLogicaAnd: ExpLogicaAnd AND_TOKEN ExpComparacion
   57             | ExpComparacion

   58 ExpComparacion: ExpComparacion IGUAL_TOKEN ExpAditiva
   59               | ExpComparacion NO_IGUAL_TOKEN ExpAditiva
   60               | ExpComparacion MENOR_TOKEN ExpAditiva
   61               | ExpComparacion MENOR_IGUAL_TOKEN ExpAditiva
   62               | ExpComparacion MAYOR_TOKEN ExpAditiva
   63               | ExpComparacion MAYOR_IGUAL_TOKEN ExpAditiva
   64               | ExpAditiva

   65 ExpAditiva: ExpAditiva MAS_TOKEN ExpMultiplicativa
   66           | ExpAditiva MENOS_TOKEN ExpMultiplicativa
   67           | ExpMultiplicativa

   68 ExpMultiplicativa: ExpMultiplicativa MULT_TOKEN ExpUnaria
   69                  | ExpMultiplicativa DIV_TOKEN ExpUnaria
   70                  | ExpMultiplicativa MOD_TOKEN ExpUnaria
   71                  | ExpUnaria

   72 ExpUnaria: NOT_TOKEN ExpUnaria
   73          | MENOS_TOKEN ExpUnaria
   74          | MAS_TOKEN ExpUnaria
   75          | INC_TOKEN ExpUnaria
   76          | DEC_TOKEN ExpUnaria
   77          | ExpPostfija

   78 ExpPostfija: ExpPrimaria
   79            | ExpPostfija PAREN_IZQ_TOKEN ListaArgumentos PAREN_DER_TOKEN
   80            | ExpPostfija CORCH_IZQ_TOKEN Expresion CORCH_DER_TOKEN
   81            | ExpPostfija INC_TOKEN
   82            | ExpPostfija DEC_TOKEN

   83 ExpPrimaria: ID_TOKEN
   84            | NUMERO_TOKEN
   85            | CADENA_TOKEN
   86            | TRUE_TOKEN
   87            | FALSE_TOKEN
   88            | PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN
   89            | MOVER_TOKEN
   90            | GIRARIZQ_TOKEN
   91            | GIRARDER_TOKEN
   92            | LEERSENSOR_TOKEN
   93            | PARAR_TOKEN
   94            | REVERSA_TOKEN
   95            | ESPERAR_TOKEN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID_TOKEN <cadena> (258) 19 35 40 83
    NUMERO_TOKEN <numero> (259) 84
    CADENA_TOKEN <cadena> (260) 85
    TRUE_TOKEN <booleano> (261) 86
    FALSE_TOKEN <booleano> (262) 87
    TIPO_TOKEN_INT (263) 43
    TIPO_TOKEN_BOOLEAN (264) 44
    TIPO_TOKEN_FLOAT (265) 45
    TIPO_TOKEN_CHAR (266) 46
    TIPO_TOKEN_STRING (267) 47
    IF_TOKEN (268) 22
    ELSE_TOKEN (269) 23
    FOR_TOKEN (270) 25
    WHILE_TOKEN (271) 33 34
    DO_TOKEN (272) 33
    VOID_TOKEN (273) 5 41
    SETUP_TOKEN (274) 5
    MOVER_TOKEN (275) 89
    GIRARIZQ_TOKEN (276) 90
    GIRARDER_TOKEN (277) 91
    LEERSENSOR_TOKEN (278) 92
    PARAR_TOKEN (279) 93
    REVERSA_TOKEN (280) 94
    ESPERAR_TOKEN (281) 95
    INICIO_TOKEN (282) 6 33
    FIN_TOKEN (283) 6 33
    PAREN_IZQ_TOKEN (284) 5 22 25 33 34 35 79 88
    PAREN_DER_TOKEN (285) 5 22 25 33 34 35 79 88
    CORCH_IZQ_TOKEN (286) 80
    CORCH_DER_TOKEN (287) 80
    PUNTOYCOMA_TOKEN (288) 3 4 9 10 25 33
    COMA_TOKEN (289) 18 39 51
    ASIGN_TOKEN (290) 20 52
    OR_TOKEN (291) 54
    AND_TOKEN (292) 56
    IGUAL_TOKEN (293) 58
    NO_IGUAL_TOKEN (294) 59
    MENOR_TOKEN (295) 60
    MENOR_IGUAL_TOKEN (296) 61
    MAYOR_TOKEN (297) 62
    MAYOR_IGUAL_TOKEN (298) 63
    MAS_TOKEN (299) 65 74
    MENOS_TOKEN (300) 66 73
    MULT_TOKEN (301) 68
    DIV_TOKEN (302) 69
    MOD_TOKEN (303) 70
    NOT_TOKEN (304) 72
    INC_TOKEN (305) 75 81
    DEC_TOKEN (306) 76 82


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    Programa <nodo> (53)
        on left: 1
        on right: 0
    DeclaracionGlobal <nodo> (54)
        on left: 2 3 4
        on right: 1 3 4
    SetupDef <nodo> (55)
        on left: 5
        on right: 1
    Bloque <nodo> (56)
        on left: 6
        on right: 5 15 22 23 25 33 34 35
    ListaInstrucciones <nodo> (57)
        on left: 7 8
        on right: 6 8
    Instruccion <nodo> (58)
        on left: 9 10 11 12 13 14 15
        on right: 8
    Declaracion <nodo> (59)
        on left: 16
        on right: 3 9 26
    ListaDeclaradores <nodo> (60)
        on left: 17 18
        on right: 16 18
    Declarador <nodo> (61)
        on left: 19
        on right: 17 18
    DeclaracionInit <nodo> (62)
        on left: 20 21
        on right: 19
    If <nodo> (63)
        on left: 22
        on right: 11
    IfPrima <nodo> (64)
        on left: 23 24
        on right: 22
    For <nodo> (65)
        on left: 25
        on right: 12
    ForInit <nodo> (66)
        on left: 26 27 28
        on right: 25
    ExpresionLogicaFor <nodo> (67)
        on left: 29 30
        on right: 25
    ForStep <nodo> (68)
        on left: 31 32
        on right: 25
    DoWhile <nodo> (69)
        on left: 33
        on right: 14
    While <nodo> (70)
        on left: 34
        on right: 13
    FuncionDef <nodo> (71)
        on left: 35
        on right: 1
    ListaParametros <nodo> (72)
        on left: 36 37
        on right: 35
    ListaParametrosCont <nodo> (73)
        on left: 38 39
        on right: 37 39
    Parametro <nodo> (74)
        on left: 40
        on right: 38 39
    TipoRetorno <nodo> (75)
        on left: 41 42
        on right: 35
    Tipo <tipo_dato> (76)
        on left: 43 44 45 46 47
        on right: 16 40 42
    ListaArgumentos <nodo> (77)
        on left: 48 49
        on right: 79
    ListaArgumentosCont <nodo> (78)
        on left: 50 51
        on right: 49 51
    Expresion <nodo> (79)
        on left: 52 53
        on right: 4 10 20 22 27 29 31 33 34 50 51 52 80 88
    ExpLogicaOr <nodo> (80)
        on left: 54 55
        on right: 52 53 54
    ExpLogicaAnd <nodo> (81)
        on left: 56 57
        on right: 54 55 56
    ExpComparacion <nodo> (82)
        on left: 58 59 60 61 62 63 64
        on right: 56 57 58 59 60 61 62 63
    ExpAditiva <nodo> (83)
        on left: 65 66 67
        on right: 58 59 60 61 62 63 64 65 66
    ExpMultiplicativa <nodo> (84)
        on left: 68 69 70 71
        on right: 65 66 67 68 69 70
    ExpUnaria <nodo> (85)
        on left: 72 73 74 75 76 77
        on right: 68 69 70 71 72 73 74 75 76
    ExpPostfija <nodo> (86)
        on left: 78 79 80 81 82
        on right: 77 79 80 81 82
    ExpPrimaria <nodo> (87)
        on left: 83 84 85 86 87 88 89 90 91 92 93 94 95
        on right: 78


State 0

    0 $accept: • Programa $end
    1 Programa: • DeclaracionGlobal SetupDef FuncionDef
    2 DeclaracionGlobal: ε •
    3                  | • DeclaracionGlobal Declaracion PUNTOYCOMA_TOKEN
    4                  | • DeclaracionGlobal Expresion PUNTOYCOMA_TOKEN

    $default  reduce using rule 2 (DeclaracionGlobal)

    Programa           go to state 1
    DeclaracionGlobal  go to state 2


State 1

    0 $accept: Programa • $end

    $end  shift, and go to state 3


State 2

    1 Programa: DeclaracionGlobal • SetupDef FuncionDef
    3 DeclaracionGlobal: DeclaracionGlobal • Declaracion PUNTOYCOMA_TOKEN
    4                  | DeclaracionGlobal • Expresion PUNTOYCOMA_TOKEN
    5 SetupDef: • VOID_TOKEN SETUP_TOKEN PAREN_IZQ_TOKEN PAREN_DER_TOKEN Bloque
   16 Declaracion: • Tipo ListaDeclaradores
   43 Tipo: • TIPO_TOKEN_INT
   44     | • TIPO_TOKEN_BOOLEAN
   45     | • TIPO_TOKEN_FLOAT
   46     | • TIPO_TOKEN_CHAR
   47     | • TIPO_TOKEN_STRING
   52 Expresion: • ExpLogicaOr ASIGN_TOKEN Expresion
   53          | • ExpLogicaOr
   54 ExpLogicaOr: • ExpLogicaOr OR_TOKEN ExpLogicaAnd
   55            | • ExpLogicaAnd
   56 ExpLogicaAnd: • ExpLogicaAnd AND_TOKEN ExpComparacion
   57             | • ExpComparacion
   58 ExpComparacion: • ExpComparacion IGUAL_TOKEN ExpAditiva
   59               | • ExpComparacion NO_IGUAL_TOKEN ExpAditiva
   60               | • ExpComparacion MENOR_TOKEN ExpAditiva
   61               | • ExpComparacion MENOR_IGUAL_TOKEN ExpAditiva
   62               | • ExpComparacion MAYOR_TOKEN ExpAditiva
   63               | • ExpComparacion MAYOR_IGUAL_TOKEN ExpAditiva
   64               | • ExpAditiva
   65 ExpAditiva: • ExpAditiva MAS_TOKEN ExpMultiplicativa
   66           | • ExpAditiva MENOS_TOKEN ExpMultiplicativa
   67           | • ExpMultiplicativa
   68 ExpMultiplicativa: • ExpMultiplicativa MULT_TOKEN ExpUnaria
   69                  | • ExpMultiplicativa DIV_TOKEN ExpUnaria
   70                  | • ExpMultiplicativa MOD_TOKEN ExpUnaria
   71                  | • ExpUnaria
   72 ExpUnaria: • NOT_TOKEN ExpUnaria
   73          | • MENOS_TOKEN ExpUnaria
   74          | • MAS_TOKEN ExpUnaria
   75          | • INC_TOKEN ExpUnaria
   76          | • DEC_TOKEN ExpUnaria
   77          | • ExpPostfija
   78 ExpPostfija: • ExpPrimaria
   79            | • ExpPostfija PAREN_IZQ_TOKEN ListaArgumentos PAREN_DER_TOKEN
   80            | • ExpPostfija CORCH_IZQ_TOKEN Expresion CORCH_DER_TOKEN
   81            | • ExpPostfija INC_TOKEN
   82            | • ExpPostfija DEC_TOKEN
   83 ExpPrimaria: • ID_TOKEN
   84            | • NUMERO_TOKEN
   85            | • CADENA_TOKEN
   86            | • TRUE_TOKEN
   87            | • FALSE_TOKEN
   88            | • PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN
   89            | • MOVER_TOKEN
   90            | • GIRARIZQ_TOKEN
   91            | • GIRARDER_TOKEN
   92            | • LEERSENSOR_TOKEN
   93            | • PARAR_TOKEN
   94            | • REVERSA_TOKEN
   95            | • ESPERAR_TOKEN

    ID_TOKEN            shift, and go to state 4
    NUMERO_TOKEN        shift, and go to state 5
    CADENA_TOKEN        shift, and go to state 6
    TRUE_TOKEN          shift, and go to state 7
    FALSE_TOKEN         shift, and go to state 8
    TIPO_TOKEN_INT      shift, and go to state 9
    TIPO_TOKEN_BOOLEAN  shift, and go to state 10
    TIPO_TOKEN_FLOAT    shift, and go to state 11
    TIPO_TOKEN_CHAR     shift, and go to state 12
    TIPO_TOKEN_STRING   shift, and go to state 13
    VOID_TOKEN          shift, and go to state 14
    MOVER_TOKEN         shift, and go to state 15
    GIRARIZQ_TOKEN      shift, and go to state 16
    GIRARDER_TOKEN      shift, and go to state 17
    LEERSENSOR_TOKEN    shift, and go to state 18
    PARAR_TOKEN         shift, and go to state 19
    REVERSA_TOKEN       shift, and go to state 20
    ESPERAR_TOKEN       shift, and go to state 21
    PAREN_IZQ_TOKEN     shift, and go to state 22
    MAS_TOKEN           shift, and go to state 23
    MENOS_TOKEN         shift, and go to state 24
    NOT_TOKEN           shift, and go to state 25
    INC_TOKEN           shift, and go to state 26
    DEC_TOKEN           shift, and go to state 27

    SetupDef           go to state 28
    Declaracion        go to state 29
    Tipo               go to state 30
    Expresion          go to state 31
    ExpLogicaOr        go to state 32
    ExpLogicaAnd       go to state 33
    ExpComparacion     go to state 34
    ExpAditiva         go to state 35
    ExpMultiplicativa  go to state 36
    ExpUnaria          go to state 37
    ExpPostfija        go to state 38
    ExpPrimaria        go to state 39


State 3

    0 $accept: Programa $end •

    $default  accept


State 4

   83 ExpPrimaria: ID_TOKEN •

    $default  reduce using rule 83 (ExpPrimaria)


State 5

   84 ExpPrimaria: NUMERO_TOKEN •

    $default  reduce using rule 84 (ExpPrimaria)


State 6

   85 ExpPrimaria: CADENA_TOKEN •

    $default  reduce using rule 85 (ExpPrimaria)


State 7

   86 ExpPrimaria: TRUE_TOKEN •

    $default  reduce using rule 86 (ExpPrimaria)


State 8

   87 ExpPrimaria: FALSE_TOKEN •

    $default  reduce using rule 87 (ExpPrimaria)


State 9

   43 Tipo: TIPO_TOKEN_INT •

    $default  reduce using rule 43 (Tipo)


State 10

   44 Tipo: TIPO_TOKEN_BOOLEAN •

    $default  reduce using rule 44 (Tipo)


State 11

   45 Tipo: TIPO_TOKEN_FLOAT •

    $default  reduce using rule 45 (Tipo)


State 12

   46 Tipo: TIPO_TOKEN_CHAR •

    $default  reduce using rule 46 (Tipo)


State 13

   47 Tipo: TIPO_TOKEN_STRING •

    $default  reduce using rule 47 (Tipo)


State 14

    5 SetupDef: VOID_TOKEN • SETUP_TOKEN PAREN_IZQ_TOKEN PAREN_DER_TOKEN Bloque

    SETUP_TOKEN  shift, and go to state 40


State 15

   89 ExpPrimaria: MOVER_TOKEN •

    $default  reduce using rule 89 (ExpPrimaria)


State 16

   90 ExpPrimaria: GIRARIZQ_TOKEN •

    $default  reduce using rule 90 (ExpPrimaria)


State 17

   91 ExpPrimaria: GIRARDER_TOKEN •

    $default  reduce using rule 91 (ExpPrimaria)


State 18

   92 ExpPrimaria: LEERSENSOR_TOKEN •

    $default  reduce using rule 92 (ExpPrimaria)


State 19

   93 ExpPrimaria: PARAR_TOKEN •

    $default  reduce using rule 93 (ExpPrimaria)


State 20

   94 ExpPrimaria: REVERSA_TOKEN •

    $default  reduce using rule 94 (ExpPrimaria)


State 21

   95 ExpPrimaria: ESPERAR_TOKEN •

    $default  reduce using rule 95 (ExpPrimaria)


State 22

   52 Expresion: • ExpLogicaOr ASIGN_TOKEN Expresion
   53          | • ExpLogicaOr
   54 ExpLogicaOr: • ExpLogicaOr OR_TOKEN ExpLogicaAnd
   55            | • ExpLogicaAnd
   56 ExpLogicaAnd: • ExpLogicaAnd AND_TOKEN ExpComparacion
   57             | • ExpComparacion
   58 ExpComparacion: • ExpComparacion IGUAL_TOKEN ExpAditiva
   59               | • ExpComparacion NO_IGUAL_TOKEN ExpAditiva
   60               | • ExpComparacion MENOR_TOKEN ExpAditiva
   61               | • ExpComparacion MENOR_IGUAL_TOKEN ExpAditiva
   62               | • ExpComparacion MAYOR_TOKEN ExpAditiva
   63               | • ExpComparacion MAYOR_IGUAL_TOKEN ExpAditiva
   64               | • ExpAditiva
   65 ExpAditiva: • ExpAditiva MAS_TOKEN ExpMultiplicativa
   66           | • ExpAditiva MENOS_TOKEN ExpMultiplicativa
   67           | • ExpMultiplicativa
   68 ExpMultiplicativa: • ExpMultiplicativa MULT_TOKEN ExpUnaria
   69                  | • ExpMultiplicativa DIV_TOKEN ExpUnaria
   70                  | • ExpMultiplicativa MOD_TOKEN ExpUnaria
   71                  | • ExpUnaria
   72 ExpUnaria: • NOT_TOKEN ExpUnaria
   73          | • MENOS_TOKEN ExpUnaria
   74          | • MAS_TOKEN ExpUnaria
   75          | • INC_TOKEN ExpUnaria
   76          | • DEC_TOKEN ExpUnaria
   77          | • ExpPostfija
   78 ExpPostfija: • ExpPrimaria
   79            | • ExpPostfija PAREN_IZQ_TOKEN ListaArgumentos PAREN_DER_TOKEN
   80            | • ExpPostfija CORCH_IZQ_TOKEN Expresion CORCH_DER_TOKEN
   81            | • ExpPostfija INC_TOKEN
   82            | • ExpPostfija DEC_TOKEN
   83 ExpPrimaria: • ID_TOKEN
   84            | • NUMERO_TOKEN
   85            | • CADENA_TOKEN
   86            | • TRUE_TOKEN
   87            | • FALSE_TOKEN
   88            | • PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN
   88            | PAREN_IZQ_TOKEN • Expresion PAREN_DER_TOKEN
   89            | • MOVER_TOKEN
   90            | • GIRARIZQ_TOKEN
   91            | • GIRARDER_TOKEN
   92            | • LEERSENSOR_TOKEN
   93            | • PARAR_TOKEN
   94            | • REVERSA_TOKEN
   95            | • ESPERAR_TOKEN

    ID_TOKEN          shift, and go to state 4
    NUMERO_TOKEN      shift, and go to state 5
    CADENA_TOKEN      shift, and go to state 6
    TRUE_TOKEN        shift, and go to state 7
    FALSE_TOKEN       shift, and go to state 8
    MOVER_TOKEN       shift, and go to state 15
    GIRARIZQ_TOKEN    shift, and go to state 16
    GIRARDER_TOKEN    shift, and go to state 17
    LEERSENSOR_TOKEN  shift, and go to state 18
    PARAR_TOKEN       shift, and go to state 19
    REVERSA_TOKEN     shift, and go to state 20
    ESPERAR_TOKEN     shift, and go to state 21
    PAREN_IZQ_TOKEN   shift, and go to state 22
    MAS_TOKEN         shift, and go to state 23
    MENOS_TOKEN       shift, and go to state 24
    NOT_TOKEN         shift, and go to state 25
    INC_TOKEN         shift, and go to state 26
    DEC_TOKEN         shift, and go to state 27

    Expresion          go to state 41
    ExpLogicaOr        go to state 32
    ExpLogicaAnd       go to state 33
    ExpComparacion     go to state 34
    ExpAditiva         go to state 35
    ExpMultiplicativa  go to state 36
    ExpUnaria          go to state 37
    ExpPostfija        go to state 38
    ExpPrimaria        go to state 39


State 23

   72 ExpUnaria: • NOT_TOKEN ExpUnaria
   73          | • MENOS_TOKEN ExpUnaria
   74          | • MAS_TOKEN ExpUnaria
   74          | MAS_TOKEN • ExpUnaria
   75          | • INC_TOKEN ExpUnaria
   76          | • DEC_TOKEN ExpUnaria
   77          | • ExpPostfija
   78 ExpPostfija: • ExpPrimaria
   79            | • ExpPostfija PAREN_IZQ_TOKEN ListaArgumentos PAREN_DER_TOKEN
   80            | • ExpPostfija CORCH_IZQ_TOKEN Expresion CORCH_DER_TOKEN
   81            | • ExpPostfija INC_TOKEN
   82            | • ExpPostfija DEC_TOKEN
   83 ExpPrimaria: • ID_TOKEN
   84            | • NUMERO_TOKEN
   85            | • CADENA_TOKEN
   86            | • TRUE_TOKEN
   87            | • FALSE_TOKEN
   88            | • PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN
   89            | • MOVER_TOKEN
   90            | • GIRARIZQ_TOKEN
   91            | • GIRARDER_TOKEN
   92            | • LEERSENSOR_TOKEN
   93            | • PARAR_TOKEN
   94            | • REVERSA_TOKEN
   95            | • ESPERAR_TOKEN

    ID_TOKEN          shift, and go to state 4
    NUMERO_TOKEN      shift, and go to state 5
    CADENA_TOKEN      shift, and go to state 6
    TRUE_TOKEN        shift, and go to state 7
    FALSE_TOKEN       shift, and go to state 8
    MOVER_TOKEN       shift, and go to state 15
    GIRARIZQ_TOKEN    shift, and go to state 16
    GIRARDER_TOKEN    shift, and go to state 17
    LEERSENSOR_TOKEN  shift, and go to state 18
    PARAR_TOKEN       shift, and go to state 19
    REVERSA_TOKEN     shift, and go to state 20
    ESPERAR_TOKEN     shift, and go to state 21
    PAREN_IZQ_TOKEN   shift, and go to state 22
    MAS_TOKEN         shift, and go to state 23
    MENOS_TOKEN       shift, and go to state 24
    NOT_TOKEN         shift, and go to state 25
    INC_TOKEN         shift, and go to state 26
    DEC_TOKEN         shift, and go to state 27

    ExpUnaria    go to state 42
    ExpPostfija  go to state 38
    ExpPrimaria  go to state 39


State 24

   72 ExpUnaria: • NOT_TOKEN ExpUnaria
   73          | • MENOS_TOKEN ExpUnaria
   73          | MENOS_TOKEN • ExpUnaria
   74          | • MAS_TOKEN ExpUnaria
   75          | • INC_TOKEN ExpUnaria
   76          | • DEC_TOKEN ExpUnaria
   77          | • ExpPostfija
   78 ExpPostfija: • ExpPrimaria
   79            | • ExpPostfija PAREN_IZQ_TOKEN ListaArgumentos PAREN_DER_TOKEN
   80            | • ExpPostfija CORCH_IZQ_TOKEN Expresion CORCH_DER_TOKEN
   81            | • ExpPostfija INC_TOKEN
   82            | • ExpPostfija DEC_TOKEN
   83 ExpPrimaria: • ID_TOKEN
   84            | • NUMERO_TOKEN
   85            | • CADENA_TOKEN
   86            | • TRUE_TOKEN
   87            | • FALSE_TOKEN
   88            | • PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN
   89            | • MOVER_TOKEN
   90            | • GIRARIZQ_TOKEN
   91            | • GIRARDER_TOKEN
   92            | • LEERSENSOR_TOKEN
   93            | • PARAR_TOKEN
   94            | • REVERSA_TOKEN
   95            | • ESPERAR_TOKEN

    ID_TOKEN          shift, and go to state 4
    NUMERO_TOKEN      shift, and go to state 5
    CADENA_TOKEN      shift, and go to state 6
    TRUE_TOKEN        shift, and go to state 7
    FALSE_TOKEN       shift, and go to state 8
    MOVER_TOKEN       shift, and go to state 15
    GIRARIZQ_TOKEN    shift, and go to state 16
    GIRARDER_TOKEN    shift, and go to state 17
    LEERSENSOR_TOKEN  shift, and go to state 18
    PARAR_TOKEN       shift, and go to state 19
    REVERSA_TOKEN     shift, and go to state 20
    ESPERAR_TOKEN     shift, and go to state 21
    PAREN_IZQ_TOKEN   shift, and go to state 22
    MAS_TOKEN         shift, and go to state 23
    MENOS_TOKEN       shift, and go to state 24
    NOT_TOKEN         shift, and go to state 25
    INC_TOKEN         shift, and go to state 26
    DEC_TOKEN         shift, and go to state 27

    ExpUnaria    go to state 43
    ExpPostfija  go to state 38
    ExpPrimaria  go to state 39


State 25

   72 ExpUnaria: • NOT_TOKEN ExpUnaria
   72          | NOT_TOKEN • ExpUnaria
   73          | • MENOS_TOKEN ExpUnaria
   74          | • MAS_TOKEN ExpUnaria
   75          | • INC_TOKEN ExpUnaria
   76          | • DEC_TOKEN ExpUnaria
   77          | • ExpPostfija
   78 ExpPostfija: • ExpPrimaria
   79            | • ExpPostfija PAREN_IZQ_TOKEN ListaArgumentos PAREN_DER_TOKEN
   80            | • ExpPostfija CORCH_IZQ_TOKEN Expresion CORCH_DER_TOKEN
   81            | • ExpPostfija INC_TOKEN
   82            | • ExpPostfija DEC_TOKEN
   83 ExpPrimaria: • ID_TOKEN
   84            | • NUMERO_TOKEN
   85            | • CADENA_TOKEN
   86            | • TRUE_TOKEN
   87            | • FALSE_TOKEN
   88            | • PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN
   89            | • MOVER_TOKEN
   90            | • GIRARIZQ_TOKEN
   91            | • GIRARDER_TOKEN
   92            | • LEERSENSOR_TOKEN
   93            | • PARAR_TOKEN
   94            | • REVERSA_TOKEN
   95            | • ESPERAR_TOKEN

    ID_TOKEN          shift, and go to state 4
    NUMERO_TOKEN      shift, and go to state 5
    CADENA_TOKEN      shift, and go to state 6
    TRUE_TOKEN        shift, and go to state 7
    FALSE_TOKEN       shift, and go to state 8
    MOVER_TOKEN       shift, and go to state 15
    GIRARIZQ_TOKEN    shift, and go to state 16
    GIRARDER_TOKEN    shift, and go to state 17
    LEERSENSOR_TOKEN  shift, and go to state 18
    PARAR_TOKEN       shift, and go to state 19
    REVERSA_TOKEN     shift, and go to state 20
    ESPERAR_TOKEN     shift, and go to state 21
    PAREN_IZQ_TOKEN   shift, and go to state 22
    MAS_TOKEN         shift, and go to state 23
    MENOS_TOKEN       shift, and go to state 24
    NOT_TOKEN         shift, and go to state 25
    INC_TOKEN         shift, and go to state 26
    DEC_TOKEN         shift, and go to state 27

    ExpUnaria    go to state 44
    ExpPostfija  go to state 38
    ExpPrimaria  go to state 39


State 26

   72 ExpUnaria: • NOT_TOKEN ExpUnaria
   73          | • MENOS_TOKEN ExpUnaria
   74          | • MAS_TOKEN ExpUnaria
   75          | • INC_TOKEN ExpUnaria
   75          | INC_TOKEN • ExpUnaria
   76          | • DEC_TOKEN ExpUnaria
   77          | • ExpPostfija
   78 ExpPostfija: • ExpPrimaria
   79            | • ExpPostfija PAREN_IZQ_TOKEN ListaArgumentos PAREN_DER_TOKEN
   80            | • ExpPostfija CORCH_IZQ_TOKEN Expresion CORCH_DER_TOKEN
   81            | • ExpPostfija INC_TOKEN
   82            | • ExpPostfija DEC_TOKEN
   83 ExpPrimaria: • ID_TOKEN
   84            | • NUMERO_TOKEN
   85            | • CADENA_TOKEN
   86            | • TRUE_TOKEN
   87            | • FALSE_TOKEN
   88            | • PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN
   89            | • MOVER_TOKEN
   90            | • GIRARIZQ_TOKEN
   91            | • GIRARDER_TOKEN
   92            | • LEERSENSOR_TOKEN
   93            | • PARAR_TOKEN
   94            | • REVERSA_TOKEN
   95            | • ESPERAR_TOKEN

    ID_TOKEN          shift, and go to state 4
    NUMERO_TOKEN      shift, and go to state 5
    CADENA_TOKEN      shift, and go to state 6
    TRUE_TOKEN        shift, and go to state 7
    FALSE_TOKEN       shift, and go to state 8
    MOVER_TOKEN       shift, and go to state 15
    GIRARIZQ_TOKEN    shift, and go to state 16
    GIRARDER_TOKEN    shift, and go to state 17
    LEERSENSOR_TOKEN  shift, and go to state 18
    PARAR_TOKEN       shift, and go to state 19
    REVERSA_TOKEN     shift, and go to state 20
    ESPERAR_TOKEN     shift, and go to state 21
    PAREN_IZQ_TOKEN   shift, and go to state 22
    MAS_TOKEN         shift, and go to state 23
    MENOS_TOKEN       shift, and go to state 24
    NOT_TOKEN         shift, and go to state 25
    INC_TOKEN         shift, and go to state 26
    DEC_TOKEN         shift, and go to state 27

    ExpUnaria    go to state 45
    ExpPostfija  go to state 38
    ExpPrimaria  go to state 39


State 27

   72 ExpUnaria: • NOT_TOKEN ExpUnaria
   73          | • MENOS_TOKEN ExpUnaria
   74          | • MAS_TOKEN ExpUnaria
   75          | • INC_TOKEN ExpUnaria
   76          | • DEC_TOKEN ExpUnaria
   76          | DEC_TOKEN • ExpUnaria
   77          | • ExpPostfija
   78 ExpPostfija: • ExpPrimaria
   79            | • ExpPostfija PAREN_IZQ_TOKEN ListaArgumentos PAREN_DER_TOKEN
   80            | • ExpPostfija CORCH_IZQ_TOKEN Expresion CORCH_DER_TOKEN
   81            | • ExpPostfija INC_TOKEN
   82            | • ExpPostfija DEC_TOKEN
   83 ExpPrimaria: • ID_TOKEN
   84            | • NUMERO_TOKEN
   85            | • CADENA_TOKEN
   86            | • TRUE_TOKEN
   87            | • FALSE_TOKEN
   88            | • PAREN_IZQ_TOKEN Expresion PAREN_DER_TOKEN
   89            | • MOVER_TOKEN
   90            | • GIRARIZQ_TOKEN
   91            | • GIRARDER_TOKEN
   92            | • LEERSENSOR_TOKEN
   93            | • PARAR_TOKEN
   94            | • REVERSA_TOKEN
   95            | • ESPERAR_TOKEN
